[project]
name = "opentrons-edge"
version = "0.1.0"
description = "Edge service for the Opentrons OT-2"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opentrons-driver>=0.1.0",
    "puda-comms==0.0.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
opentrons-driver = { workspace = true }